--- a/css/styles.css
+++ b/css/styles.css
@@ -65,3 +65,21 @@ body{
     color: white;
     text-shadow: 0px 0px 2px black;    
 }
+
+
+
+
+
+.service{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.service-title{
+    font-weight: lighter;
+    color: #1c1c1c;
+}
+
+.service p{
+    color: #727272;
+}
