--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 body{
     font-family: 'Mulish', sans-serif;
 }
+p{
+    color: #727272;
+}
 
 /*
 * Header-Bereich
@@ -89,10 +92,6 @@ body{
     color: #1c1c1c;
 }
 
-.service p{
-    color: #727272;
-}
-
 .service-icon{
     color: #e0e0e0;
     font-size: 1500%;
@@ -131,6 +130,50 @@ body{
     font-size: 110%;
     color: #1c1c1c;
 }
-.feature-text p{
-    color: #727272;
+
+
+
+/*
+* Clients-Bereich
+*/
+.clients{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: #fafafa;
+}
+
+.clients-heading {
+    font-weight: lighter;
+    margin-bottom: 0px;
+    text-align: center;
+}
+
+.clients-subheading{
+    text-align: center;
+}
+
+.client-image{
+    width: 100%;
+    border-radius: 10000px;
+    border: 5px solid white;
+}
+
+.client-quote{
+    border: 2px solid #f3f3f3;
+    background-color: white;
+    padding: 35px 70px 45px 75px;
+    border-radius: 3px;
+    font-size: 150%;
+    font-weight: lighter;
+    font-style: italic;
+}
+
+.client-quote p{
+    margin-bottom: 0px;
+}
+
+.client-quote-author{
+    font-style: normal;
+    font-size: 60%;
+    color: #7185c4;
 }
