--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ p{
 */
 .clients{
     padding-top: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 60px;
     background-color: #fafafa;
 }
 
@@ -150,6 +150,7 @@ p{
 
 .clients-subheading{
     text-align: center;
+    margin-bottom: 50px;
 }
 
 .client-image{
@@ -202,4 +203,24 @@ p{
     margin-top: -13px;
     border: 13px solid transparent;
     border-right: 13px solid white;
+}
+
+.client-quote-left::before{
+    right: -30px;
+    left: auto;
+    margin-top: -15px;
+    border: 15px solid transparent;
+    border-left: 15px solid #f3f3f3;
+}
+
+.client-quote-left::after{
+    right: -26px;
+    left: auto;
+    margin-top: -13px;
+    border: 13px solid transparent;
+    border-left: 13px solid white;
+}
+
+.row{
+    margin-bottom: 40px;
 }
