--- a/css/styles.css
+++ b/css/styles.css
@@ -224,3 +224,12 @@ p{
 .row{
     margin-bottom: 40px;
 }
+
+.html-logo{
+    width: 50px; 
+    padding-left: 47%;
+    padding-top: 30px;
+}
+.css-logo{
+    width: 50px;
+}
