--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,12 @@ p{
     color: #727272;
 }
 
+.circle-image{
+    width: 100%;
+    border-radius: 10000px;
+    border: 5px solid white;
+}
+
 /*
 * Header-Bereich
 */
@@ -153,12 +159,6 @@ p{
     margin-bottom: 50px;
 }
 
-.client-image{
-    width: 100%;
-    border-radius: 10000px;
-    border: 5px solid white;
-}
-
 .client-quote{
     border: 2px solid #f3f3f3;
     background-color: white;
@@ -225,6 +225,11 @@ p{
     margin-bottom: 40px;
 }
 
+
+
+/*
+* Logo-Bereich
+*/
 .html-logo{
     width: 50px; 
     padding-left: 47%;
@@ -232,4 +237,52 @@ p{
 }
 .css-logo{
     width: 50px;
+}
+
+
+
+/*
+* Team-Bereich
+*/
+.teams{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: #111111;
+    color: white;
+}
+
+.teams-heading{
+    font-weight: lighter;
+    color: white;
+    margin-bottom: 0px;
+    text-align: center;
+}
+
+.teams-subheading{
+    color: #7b7b7b;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+.team-image{
+    max-width: 70%;
+}
+
+.team-image-container{
+    text-align: center;
+}
+
+.team-name{
+    font-size: 14px;
+    text-align: center;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+
+.team-name-desc{
+    font-size: 11px;
+    font-weight: lighter;
+    text-align: center;
+    color: white;
 }
