--- a/css/styles.css
+++ b/css/styles.css
@@ -285,4 +285,23 @@ p{
     font-weight: lighter;
     text-align: center;
     color: white;
+    margin-bottom: 5px;
+}
+
+.team-icons{
+    text-align: center;
+}
+
+.team-icon{
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    color: white;
+    border: 3px solid white;
+    text-align: center;
+    border-radius: 10000px;
+}
+
+.team-icon .fab{
+    margin-top: 7px;
 }
