--- a/css/styles.css
+++ b/css/styles.css
@@ -305,3 +305,10 @@ p{
 .team-icon .fab{
     margin-top: 7px;
 }
+
+.footer{
+    text-align: center;
+    margin-bottom: 0px;
+    color: white;
+    font-weight: lighter;
+}
