--- a/css/styles.css
+++ b/css/styles.css
@@ -253,7 +253,6 @@ p{
 
 .teams-heading{
     font-weight: lighter;
-    color: white;
     margin-bottom: 0px;
     text-align: center;
 }
@@ -311,4 +310,62 @@ p{
     margin-bottom: 0px;
     color: white;
     font-weight: lighter;
+}
+
+
+
+/*
+* Kontakt-Bereich
+*/
+.contact{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: #768fc5;
+    color: white;
+}
+
+.contact-heading{
+    font-weight: lighter;
+    margin-bottom: 20px;
+}
+
+.contact-subheading{
+    color: white;
+    font-weight: lighter;
+    font-size: 15px;
+}
+
+.contact-methods{
+    color: white;
+    list-style-type: none;
+}
+.contact-methods li{
+    width: 50%;
+    float: left;
+    font-weight: lighter;
+    height: 2.5em;
+}
+
+.contact-methods li .fas, .fab{
+    font-size: 150%;
+}
+
+.contact-icon{
+    display: inline-block;
+    width: 40px;
+    text-align: center;
+}
+
+.contact-input{
+    width: 100%;
+    margin-bottom: 28px;
+    color: black;
+}
+
+.contact-message{
+    height: 140px;
+}
+
+input.contact-submit[type="submit"]{
+    background-color: white;
 }
