--- a/css/styles.css
+++ b/css/styles.css
@@ -305,7 +305,7 @@ p{
     margin-top: 7px;
 }
 
-.footer{
+.supported{
     text-align: center;
     margin-bottom: 0px;
     color: white;
@@ -319,7 +319,7 @@ p{
 */
 .contact{
     padding-top: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 60px;
     background-color: #768fc5;
     color: white;
 }
@@ -368,4 +368,28 @@ p{
 
 input.contact-submit[type="submit"]{
     background-color: white;
+    margin-bottom: 0px;
+}
+
+.contact-form{
+    margin-bottom: 0px;
+}
+
+
+
+/*
+* Footer-Bereich
+*/
+.footer{
+    background-color: #768fc5;
+    text-align: center;
+    font-weight: lighter;
+}
+.footer p{
+    color: white;    
+}
+
+.footer-hr{
+    margin-top: 0px;
+    margin-bottom: 25px;
 }
