--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ p{
 .header-navbar-links a:hover{
     color: gray;
     text-decoration: underline;
+    transition: all 0.5s;
 }
 
 .header-brand-wrapper{
@@ -141,6 +142,10 @@ p{
     text-align: center;
     font-size: 40px;
     float: left;
+    transition: all 1s;
+}
+.feature-icon:hover{
+    transform: rotate(360deg);
 }
 
 .feature-text{
@@ -380,6 +385,7 @@ p{
 
 .contact-input:hover{
     background-color: rgb(243, 229, 229);
+    transition: all 0.5s;
 }
 
 .contact-input:focus,
