--- a/css/parts/_clients.scss
+++ b/css/parts/_clients.scss
@@ -27,10 +27,10 @@
     font-weight: lighter;
     font-style: italic;
     position: relative;
-}
 
-.client-quote p {
-    margin-bottom: 0px;
+    p {
+        margin-bottom: 0px;
+    }
 }
 
 .client-quote-author {
