--- a/css/parts/_footer.scss
+++ b/css/parts/_footer.scss
@@ -5,14 +5,15 @@
     background-color: #768fc5;
     text-align: center;
     font-weight: lighter;
-}
-.footer p {
-    color: white;
-}
 
-.footer a {
-    color: white;
-    text-decoration: none;
+    p {
+        color: white;
+    }
+
+    a {
+        color: white;
+        text-decoration: none;
+    }
 }
 
 .footer-hr {
