--- a/css/parts/_features.scss
+++ b/css/parts/_features.scss
@@ -17,16 +17,18 @@
     font-size: 40px;
     float: left;
     transition: all 1s;
-}
-.feature-icon:hover {
-    transform: rotate(360deg);
+
+    &:hover {
+        transform: rotate(360deg);
+    }
 }
 
 .feature-text {
     margin-left: 80px;
-}
-.feature-text h5 {
-    margin-bottom: 5px;
-    font-size: 110%;
-    color: #1c1c1c;
+
+    h5 {
+        margin-bottom: 5px;
+        font-size: 110%;
+        color: #1c1c1c;
+    }
 }
