--- a/css/parts/_header.scss
+++ b/css/parts/_header.scss
@@ -9,27 +9,27 @@
 }
 
 .header-navbar-links {
-    color: white;
+    color: rgb(255, 255, 255);
     float: right;
     margin-top: 50px;
-}
 
-.header-navbar-links li {
-    float: left;
-    list-style-type: none;
-    margin-left: 26px;
-    text-shadow: 0px 0px 2px black;
-}
+    li {
+        float: left;
+        list-style-type: none;
+        margin-left: 26px;
+        text-shadow: 0px 0px 2px black;
+    }
 
-.header-navbar-links a {
-    text-decoration: none;
-    color: white;
-}
+    a {
+        text-decoration: none;
+        color: rgb(255, 255, 255);
+    }
 
-.header-navbar-links a:hover {
-    color: gray;
-    text-decoration: underline;
-    transition: all 0.5s;
+    a:hover {
+        color: gray;
+        text-decoration: underline;
+        transition: all 0.5s;
+    }
 }
 
 .header-brand-wrapper {
@@ -38,7 +38,7 @@
 }
 
 .header-brand {
-    color: white;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     font-weight: bold;
     font-size: 150%;
@@ -67,16 +67,16 @@
 
 .slogan-button {
     margin-top: 60px;
-    color: white;
+    color: rgb(255, 255, 255);
     text-shadow: 0px 0px 2px black;
-}
 
-.slogan-button a {
-    text-decoration: none;
-    color: white;
-}
+    a {
+        text-decoration: none;
+        color: rgb(255, 255, 255);
+    }
 
-.slogan-button:hover {
-    color: white;
-    text-shadow: 0px 0px 2px black;
+    a:hover {
+        color: rgb(255, 255, 255);
+        text-shadow: 0px 0px 2px black;
+    }
 }
