--- a/css/parts/_teams.scss
+++ b/css/parts/_teams.scss
@@ -56,11 +56,11 @@
     border: 3px solid white;
     text-align: center;
     border-radius: 10000px;
-}
 
-.team-icon .fab {
-    margin-top: 5px;
-    font-size: 100%;
+    .fab {
+        margin-top: 5px;
+        font-size: 100%;
+    }
 }
 
 .supported {
