--- a/css/parts/_service.scss
+++ b/css/parts/_service.scss
@@ -22,19 +22,14 @@
     margin-top: -20%;
     margin-bottom: -20%;
     display: none;
-}
-@media (min-width: 550px) {
-    .service-icon {
+
+    @media ($bp-larger-than-phablet) {
         display: block;
     }
-}
-@media (min-width: 750px) {
-    .service-icon {
+    @media ($bp-larger-than-tablet) {
         font-size: 1000%;
     }
-}
-@media (min-width: 1000px) {
-    .service-icon {
+    @media ($bp-larger-than-desktop) {
         font-size: 1500%;
     }
 }
