--- a/css/parts/_features.scss
+++ b/css/parts/_features.scss
@@ -8,27 +8,42 @@
 
 .feature-icon {
     width: 70px;
-    height: 67px;
-    padding-top: 3px;
+    height: 60px;
+    padding-top: 10px;
     background-color: #1c1c1c;
     border-radius: 35px;
     color: white;
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
     float: left;
     transition: all 1s;
+
+    @media ($bp-larger-than-phablet) {
+        display: none;
+    }
+    @media ($bp-larger-than-tablet) {
+        display: block;
+    }
 
     &:hover {
         transform: rotate(360deg);
     }
 }
 
+$feature-text-maring-left: 90px;
 .feature-text {
-    margin-left: 80px;
+    margin-left: $feature-text-maring-left;
+
+    @media ($bp-larger-than-tablet) {
+        margin-left: 0px;
+    }
+    @media ($bp-larger-than-phablet) {
+        margin-left: $feature-text-maring-left;
+    }
 
     h5 {
-        margin-bottom: 5px;
-        font-size: 110%;
+        margin-bottom: 8px;
+        font-size: 150%;
         color: #1c1c1c;
     }
 }
