--- a/css/styles.css
+++ b/css/styles.css
@@ -941,16 +941,28 @@ p {
 
 .feature-icon {
   width: 70px;
-  height: 67px;
-  padding-top: 3px;
+  height: 60px;
+  padding-top: 10px;
   background-color: #1c1c1c;
   border-radius: 35px;
   color: white;
   text-align: center;
-  font-size: 40px;
+  font-size: 30px;
   float: left;
   -webkit-transition: all 1s;
   transition: all 1s;
+}
+
+@media (min-width: 550px) {
+  .feature-icon {
+    display: none;
+  }
+}
+
+@media (min-width: 750px) {
+  .feature-icon {
+    display: block;
+  }
 }
 
 .feature-icon:hover {
@@ -959,12 +971,24 @@ p {
 }
 
 .feature-text {
-  margin-left: 80px;
+  margin-left: 90px;
+}
+
+@media (min-width: 750px) {
+  .feature-text {
+    margin-left: 0px;
+  }
+}
+
+@media (min-width: 550px) {
+  .feature-text {
+    margin-left: 90px;
+  }
 }
 
 .feature-text h5 {
-  margin-bottom: 5px;
-  font-size: 110%;
+  margin-bottom: 8px;
+  font-size: 150%;
   color: #1c1c1c;
 }
 
