--- a/css/styles.css
+++ b/css/styles.css
@@ -1015,12 +1015,18 @@ p {
 .client-quote {
   border: 2px solid #f3f3f3;
   background-color: white;
-  padding: 55px 75px 65px 75px;
+  padding: 25px 25px 25px 25px;
   border-radius: 3px;
   font-size: 150%;
   font-weight: lighter;
   font-style: italic;
   position: relative;
+}
+
+@media (min-width: 550px) {
+  .client-quote {
+    padding: 55px 75px 65px 75px;
+  }
 }
 
 .client-quote p {
@@ -1029,52 +1035,92 @@ p {
 
 .client-quote-author {
   font-style: normal;
-  font-size: 60%;
+  font-size: 70%;
   color: #7185c4;
+  margin-top: 20px;
 }
 
-.client-quote::before,
-.client-quote::after {
-  content: "";
-  display: block;
-  width: 0px;
-  height: 0px;
-  position: absolute;
-  top: 50%;
-}
-
-.client-quote::before {
-  left: -30px;
-  margin-top: -15px;
-  border: 15px solid transparent;
-  border-right: 15px solid #f3f3f3;
-}
-
-.client-quote::after {
-  left: -26px;
-  margin-top: -13px;
-  border: 13px solid transparent;
-  border-right: 13px solid white;
-}
-
-.client-quote-left::before {
-  right: -30px;
-  left: auto;
-  margin-top: -15px;
-  border: 15px solid transparent;
-  border-left: 15px solid #f3f3f3;
-}
-
-.client-quote-left::after {
-  right: -26px;
-  left: auto;
-  margin-top: -13px;
-  border: 13px solid transparent;
-  border-left: 13px solid white;
+@media (min-width: 550px) {
+  .client-quote::before,
+  .client-quote::after {
+    content: "";
+    display: block;
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    top: 50%;
+  }
+  .client-quote::before {
+    left: -30px;
+    margin-top: -15px;
+    border: 15px solid transparent;
+    border-right: 15px solid #f3f3f3;
+  }
+  .client-quote::after {
+    left: -26px;
+    margin-top: -13px;
+    border: 13px solid transparent;
+    border-right: 13px solid white;
+  }
+  .client-quote-left::before {
+    right: -30px;
+    left: auto;
+    margin-top: -15px;
+    border: 15px solid transparent;
+    border-left: 15px solid #f3f3f3;
+  }
+  .client-quote-left::after {
+    right: -26px;
+    left: auto;
+    margin-top: -13px;
+    border: 13px solid transparent;
+    border-left: 13px solid white;
+  }
 }
 
 .row {
   margin-bottom: 40px;
+}
+
+.client-image {
+  display: none;
+}
+
+@media (min-width: 550px) {
+  .client-image {
+    display: block;
+    margin-top: 150px;
+  }
+}
+
+@media (min-width: 750px) {
+  .client-image {
+    margin-top: 75px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .client-image {
+    margin-top: 10px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .client-image {
+    margin-top: 0px;
+  }
+}
+
+.client-quote-image {
+  width: 40px;
+  float: left;
+  margin-top: -12px;
+}
+
+@media (min-width: 550px) {
+  .client-quote-image {
+    display: none;
+  }
 }
 
 /*
