--- a/css/parts/_teams.scss
+++ b/css/parts/_teams.scss
@@ -21,7 +21,13 @@
 }
 
 .team-image {
-    max-width: 70%;
+    max-width: 25%;
+    margin-top: 25px;
+
+    @media ($bp-larger-than-phablet) {
+        max-width: 70%;
+        margin-top: 0px;
+    }
 }
 
 .team-image-container {
@@ -32,8 +38,12 @@
     font-size: 14px;
     text-align: center;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 0px;
     margin-bottom: 0px;
+
+    @media ($bp-larger-than-phablet) {
+        margin-top: 10px;
+    }
 }
 
 .team-name-desc {
