--- a/css/styles.css
+++ b/css/styles.css
@@ -817,6 +817,13 @@ p {
   color: white;
   float: right;
   margin-top: 50px;
+  display: none;
+}
+
+@media (min-width: 750px) {
+  .header-navbar-links {
+    display: block;
+  }
 }
 
 .header-navbar-links li {
@@ -885,6 +892,21 @@ p {
 .slogan-button a:hover {
   color: white;
   text-shadow: 0px 0px 2px black;
+}
+
+#side-menu-trigger {
+  float: right;
+  color: white;
+  margin-top: 35px;
+  padding: 5px 25px 5px 25px;
+  font-size: 200%;
+  height: inherit;
+}
+
+@media (min-width: 750px) {
+  #side-menu-trigger {
+    display: none;
+  }
 }
 
 /*
@@ -1255,6 +1277,20 @@ p {
   height: 2.5em;
 }
 
+@media (min-width: 550px) {
+  .contact-methods li {
+    width: 100%;
+    float: none;
+  }
+}
+
+@media (min-width: 1000px) {
+  .contact-methods li {
+    width: 50%;
+    float: left;
+  }
+}
+
 .contact-methods li .fas,
 .contact-methods .fab {
   font-size: 150%;
@@ -1262,7 +1298,7 @@ p {
 
 .contact-icon {
   display: inline-block;
-  width: 40px;
+  width: 33px;
   text-align: center;
 }
 
@@ -1317,5 +1353,31 @@ input.contact-submit[type="submit"] {
 .footer-hr {
   margin-top: 0px;
   margin-bottom: 25px;
+}
+
+.side-menu {
+  background-color: #e1e1e1;
+  padding-top: 15px;
+}
+
+.side-menu h3 {
+  padding-left: 15px;
+}
+
+.side-menu-navigation {
+  list-style-type: none;
+  border-bottom: 1px solid #bbb;
+}
+
+.side-menu-navigation li {
+  border-top: 1px solid #bbb;
+  margin-bottom: 0px;
+}
+
+.side-menu-navigation a {
+  display: block;
+  padding: 10px 0px 10px 15px;
+  text-decoration: none;
+  color: #222;
 }
 /*# sourceMappingURL=styles.css.map */
